
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int tmp ;
struct TYPE_2__ {unsigned long s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__* h_addr_list; } ;
typedef int saddr ;


 int AF_INET ;
 int CONNECT_ERR ;
 int HOST_NOT_RESOLVED ;
 int IPPROTO_TCP ;
 int NODELAY_ERR ;
 int SOCKET_ERR ;
 int SOCK_STREAM ;
 int TCP_NODELAY ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memset (void*,int ,int) ;
 scalar_t__ setsockopt (int,int ,int ,void*,int) ;
 int socket (int ,int ,int ) ;

int connect_to_host(char *h, int p) {
 int sock,tmp=1;
        struct hostent *host;
        struct sockaddr_in saddr;

 if((host=gethostbyname(h))==((void*)0)) {
                return HOST_NOT_RESOLVED;
        }

        if((sock=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP))==-1) {
                return SOCKET_ERR;
        }
        memset((void *)&saddr, 0, sizeof(struct sockaddr_in));
        saddr.sin_family=AF_INET;
        saddr.sin_addr.s_addr=*((unsigned long *)host->h_addr_list[0]);
        saddr.sin_port=htons(p);
        if(connect(sock, (struct sockaddr *)&saddr, sizeof(saddr))<0) {
                return CONNECT_ERR;
        }




 if(setsockopt(sock, IPPROTO_TCP, TCP_NODELAY, (void *)&tmp, sizeof(tmp))!=0) {
  return NODELAY_ERR;
 }

 return sock;
}
